<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.6.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.hb56</groupId>
    <artifactId>block-chain-api</artifactId>
    <version>2.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <organization>
        <name>HarborSoft</name>
        <url>http://www.harbsoft.com</url>
    </organization>

    <modules>
        <module>block-chain-configure</module>
        <module>block-chain-common</module>
        <module>block-chain-model</module>
        <module>block-chain-swagger</module>
        <module>block-chain-cors-config</module>
        <module>block-chain-config</module>
        <module>block-chain-feign-config</module>
        <module>block-chain-zuul-config</module>
        <module>block-chain-resource-config</module>
        <module>block-chain-resource-remote</module>
        <module>block-chain-resource-feign</module>
        <module>block-chain-resource-zuul</module>
        <module>block-chain-client</module>
        <module>block-chain-security</module>
        <module>block-chain-zuul</module>
        <module>api-zuul</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>nexus-release</name>
            <url>http://172.16.40.63:8081/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>nexus-snapshot</name>
            <url>http://172.16.40.63:8081/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <docker.registry>172.16.40.63:5000</docker.registry>
        <docker.registry.url>http://172.16.40.63:8081/repository/docker-registry/v2</docker.registry.url>
        <hadoop.version>3.1.2</hadoop.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <file_encoding>UTF-8</file_encoding>
        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
        <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
            -Djava.net.preferIPv4Stack=true
        </argline>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.codingapi.txlcn</groupId>
                <artifactId>txlcn-tc</artifactId>
                <version>5.0.2.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>com.codingapi.txlcn</groupId>
                <artifactId>txlcn-txmsg-netty</artifactId>
                <version>5.0.2.RELEASE</version>
            </dependency>

            <!--https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>1.1.18</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>1.2.12</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
            <dependency>
                <groupId>com.oracle</groupId>
                <artifactId>ojdbc6</artifactId>
                <version>11.2.0.3</version>
            </dependency>

            <!-- swagger2 -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>2.9.2</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>2.9.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.58</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>${project.artifactId}</finalName>
    </build>

</project>
